--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<h2>Sign up</h2>
+
 <div class="form-clm">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -5,11 +7,9 @@
     <div class="field">
       <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "Name" %>
     </div>
+
     <div class="field">
       <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
-    </div>
-    <div class="field">
-      <%= f.text_field :photo, autofocus: true, autocomplete: "photo", placeholder: "Photo" %>
     </div>
 
     <div class="field">
