--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,2 @@
-<% if user_signed_in? %>
-  <%= render "home_page" %>
-<%else%>
-  <%= render "splash" %>
-<%end%>
+<h1>Home#index</h1>
+<p>Find me in app/views/home/index.html.erb</p>
