--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -1,27 +1,24 @@
-<div>
-  <div class="home-nav">
-    <h2>All Transactions</h2>
-    <%= link_to  destroy_user_session_path, method: :delete, class: "btn" do%>
-      <i class="fa-solid fa-user-slash"></i>
-    <%end%>
-  </div>
-  <div class="transactions clm-row">
-      <% if @groups.empty? %>
-        <p class="empty-clm">There's no group transaction yet. <%= link_to "Click here", new_group_path %> to create one.</p>
-      <%else%>
-        <% @groups.each do |group| %>
-          <div class="card clm-flex-row">
-            <img src=<%=group.icon%> alt="group_icon" class="icon">
-            <div class="group_descript">
-              <div class="groupe-name clm-flex-row">
-                <h3><%= group.name %></h3>
-                <p>$0</p>
-              </div>
-              <span class="card-date"><%= group.created_at.to_date %></span> 
-            </div>
-          </div>
-        <%end%>
-      <%end%>
-  </div>
-  <%= link_to "Create Group", new_group_path, class: "btn-link btn-primary el-center active submit" %>
+<div class="home-nav">
+  <%= link_to  groups_path, class: "btn" do%>
+    <i class="fa-solid fa-chevron-left"></i>
+  <%end%>
+  <h2>New Entity</h2>
+  <%= link_to  destroy_user_session_path, method: :delete, class: "btn" do%>
+    <i class="fa-solid fa-user-slash"></i>
+  <%end%>
+</div>
+<div class="form-clm">
+  <%= form_with model: @group_entity, url: group_entities_path do |f| %>
+    <div class="field">
+      <%= f.text_field :name, placeholder: 'Transaction name', class: "input_form border" %>
+    </div>
+
+    <div class="field">
+      <%= f.number_field :amount, placeholder: 'Amount', class: "input_form border" %><br>
+    </div>
+
+    <div  class= "input_btn border btn">
+      <%= f.submit "Add Transaction", class: "btn-link el-center active submit" %>
+    </div>
+  <% end %>
 </div>
